--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "lodash": "~4.11.1",
     "angular-chart.js": "~0.10.2",
     "d3": "~3.5.17",
-    "angular-recursion": "~1.0.5"
+    "angular-recursion": "~1.0.5",
+    "angular-drag-and-drop-lists": "~1.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.8",
