--- a/.eslintrc
+++ b/.eslintrc
@@ -37,7 +37,9 @@
         "angular/ng_di": [0, "function or array"],
         "angular/ng_angularelement": 0,
         "angular/ng_on_watch": 1,
-        "angular/ng_controller_as_vm": 0
+        "angular/ng_controller_as_vm": 0,
+        "angular/ng_controller_as": 2,
+        "angular/ng_on_watch": 0,
     },
     "globals" :{
         "angular": true
